--- a/index.html
+++ b/index.html
@@ -1,30 +1,52 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-  <title>Borderline Wall</title>
+    <title>Borderline House</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 </head>
 
-<body>
-  <h1>Borderline Wall</h1>
-  <p>This is a test.</p>
-      <img src="muralTest.jpeg">
-      <div class="name">
-        <h2>Mural 1</h2>
-      </div>
-      <h3>Ben Bitdiddle</h3>
+<h3>Borderline House</h3>
+<a href="#" class="pop">
+  <img src="template.jpeg" style="width: 600px;">
+</a>
 
-      <img src="muralTest.jpeg">
-      <div class="name">
-        <h2>Mural 2</h2>
-      </div>
-      <h3>Ben Bitdiddle</h3>
+<a href="#" class="pop">
+  <img src="template.jpeg" style="width: 600px;">
+</a>
 
-      <img src="muralTest.jpeg">
-      <div class="name">
-        <h2>Mural 3</h2>
+<a href="#" class="pop">
+  <img src="template.jpeg" style="width: 600px;">
+</a>
+
+<a href="#" class="pop">
+  <img src="template.jpeg" style="width: 600px;">
+</a>
+
+
+<div class="modal fade" id="imagemodal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-body">
+        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span
+            class="sr-only">Close</span></button>
+        <img src="" class="imagepreview" style="width: 100%;">
       </div>
-      <h3>Ben Bitdiddle</h3>
-</body>
+    </div>
+  </div>
+</div>
+
+<script>
+  $(function () {
+    $('.pop').on('click', function () {
+      $('.imagepreview').attr('src', $(this).find('img').attr('src'));
+      $('#imagemodal').modal('show');
+    });
+  });
+</script>
 
 </html>
