--- a/index.html
+++ b/index.html
@@ -1,52 +1,83 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Borderline House</title>
+    <title>MIT Tunnel</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+    <link rel='icon' href='circleLogo.png' type='image/x-icon'>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+
+<style>
+img {
+  width: 100%;
+}
+
+.selected {
+  border: 5px solid yellow;
+}
+
+.modal-dialog {
+  top: 200px;
+}
+
+</style>
 </head>
 
-<h3>Borderline House</h3>
-<a href="#" class="pop">
-  <img src="template.jpeg" style="width: 600px;">
-</a>
+<img src="template.png" id="room0">
+<div id="wall"></div>
 
-<a href="#" class="pop">
-  <img src="template.jpeg" style="width: 600px;">
-</a>
-
-<a href="#" class="pop">
-  <img src="template.jpeg" style="width: 600px;">
-</a>
-
-<a href="#" class="pop">
-  <img src="template.jpeg" style="width: 600px;">
-</a>
-
-
-<div class="modal fade" id="imagemodal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<div class="modal fade" id="intromodal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-body">
-        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span
+        <button type="button" class="close" data-dismiss="modal" onclick='$("img").removeClass("selected");'>
+		<span aria-hidden="true">&times;</span><span
             class="sr-only">Close</span></button>
-        <img src="" class="imagepreview" style="width: 100%;">
+        <div id="intro"></div>
       </div>
     </div>
   </div>
 </div>
 
-<script>
-  $(function () {
-    $('.pop').on('click', function () {
-      $('.imagepreview').attr('src', $(this).find('img').attr('src'));
-      $('#imagemodal').modal('show');
-    });
-  });
-</script>
 
+<script>
+const maxRoom = 5;
+var arr = [];
+
+$(document).ready(function(){
+  // generate array
+  for (i = 1; i <= maxRoom; i++) {
+     arr.push(i);
+  }
+  // shuffle
+  shuffle(arr);
+  // add room based on shuffled arr values
+  arr.forEach(addRoom);
+});
+
+function shuffle(arr){
+  for (var j, x, i = arr.length; i; 
+      j = parseInt(Math.random() * i), 
+      x = arr[--i], arr[i] = arr[j], arr[j] = x
+  );
+  return arr;
+}
+
+function addRoom(i){
+  $("#wall").append('<img src="./rooms/room' + i + '.png" id="room' + i + '" onclick="popIntro(this);">');
+}
+
+function popIntro(target){
+  // visualize selection
+  $("img").removeClass("selected");
+  target.classList.add("selected");
+  // load intro text and popup intro dialog
+  $('#intro').html('<object type="text/html" data="./rooms/' + target.id + '.txt" ></object>');
+  $('#intromodal').modal('show');
+}
+</script>
 </html>
