--- a/index.html
+++ b/index.html
@@ -33,13 +33,18 @@ img {
   position: absolute;
   top: 5%;
   left: 28%;
-  width: 58%;
-  background: rgba(255,255,255,0.75);
-  font-size: 100%;
+  width: 65%;
+  background: rgba(255, 255, 255, 0.9);
+  font-size: 2vw;
+}
+ 
+h4 {
+  color:rgb(177, 0, 0);
+  font-size:4vw;
 }
  
 #subHead {
-  font-size: 80%;
+  font-size:3vw;
 }
 
 </style>
@@ -47,21 +52,22 @@ img {
 
 <img src="template.png" id="room0">
 <div id="desc">
-	<h3>Tunnel66: <span id="subHead">isolation, together.</span></h3>
+  <h4>Tunnel66: <span id="subHead">isolation, together.</span></h4>
 
 	<p>Tunnels connect many of MIT's buildings, and they can even connect a community in quarantine.
 	Inspired by <a href="https://coronamaison.fun" target="_corona">Corona Maison</a>, 
 	Tunnel66 is a place to gather and showcase the unique cultures of current and prospective MIT students, 
 	in lieu of <a href="https://admitted.mit.edu/experience" target="_cpw">CPW</a>. 
-	Click on each room below to learn more about the artist!</p>
+	Click on a room to learn more about the artist!</p>
 
 	<p><a href="https://forms.gle/aPD3rkG2edknmu589" target="_submit">Submissions</a> are open; download the <a href="./template.png" target="_template">template</a>.</p>
 	
 	<p>Tunnel66 is created and maintained by <a href="https://arts.mit.edu/artists/the-borderline/#about-the-project" target="_borderline">Borderline</a>, 
-	the student organization responsible for augmented reality murals in the tunnels under Building 66.
+  the student organization responsible for augmented reality murals in the tunnels under Building 66.
+  Contact: <a href="mailto:borderline-team@mit.edu?Subject=Tunnel66" target="_mail">borderline-team@mit.edu</a>
   </p>
 	
-	Contact: <a href="mailto:borderline-team@mit.edu?Subject=Tunnel66" target="_mail">borderline-team@mit.edu</a><br>
+
 </div>
 
 <div id="wall"></div>
