--- a/rooms/room2.html
+++ b/rooms/room2.html
@@ -1,9 +1,8 @@
-
 <p>Self Intro!</p>
-<a href="https://www.facebook.com">
+<a href="https://www.facebook.com" target="_fb">
     <img alt="Facebook" src="https://image.flaticon.com/icons/svg/124/124010.svg" width="24" height="24">
 </a>
 &nbsp;
-<a href="https://www.instagram.com">
+<a href="https://www.instagram.com" target="_ig">
     <img alt="Instagram" src="https://image.flaticon.com/icons/svg/174/174855.svg" width="24" height="24">
 </a>
