responsive modal, first self intro

--- a/index.html
+++ b/index.html
@@ -20,8 +20,15 @@ img {
   border: 5px solid yellow;
 }
 
-.modal-dialog {
-  top: 200px;
+.modal-dialog,
+.modal-content {
+  top: 5%;
+  height: 70%;
+}
+
+object {
+  width: 100%;
+  height: calc(75vh);
 }
 
 #room0 {
@@ -31,7 +38,7 @@ img {
 
 #desc {
   position: absolute;
-  top: 5%;
+  top: 3%;
   left: 28%;
   width: 65%;
   background: rgba(255, 255, 255, 0.9);
@@ -54,18 +61,20 @@ h4 {
 <div id="desc">
   <h4>Tunnel66: <span id="subHead">isolation, together.</span></h4>
 
-	<p>Tunnels connect many of MIT's buildings, and they can even connect a community in quarantine.
+	<p>
+  Tunnels connect many of MIT's buildings, and they can even connect a community in quarantine.
 	Inspired by <a href="https://coronamaison.fun" target="_corona">Corona Maison</a>, 
 	Tunnel66 is a place to gather and showcase the unique cultures of current and prospective MIT students, 
 	in lieu of <a href="https://admitted.mit.edu/experience" target="_cpw">CPW</a>. 
-	Click on a room to learn more about the artist!</p>
+	Click on a room to learn more about the artist!
 
-	<p><a href="https://forms.gle/aPD3rkG2edknmu589" target="_submit">Submissions</a> are open; download the <a href="./template.png" target="_template">template</a>.</p>
-	
-	<p>Tunnel66 is created and maintained by <a href="https://arts.mit.edu/artists/the-borderline/#about-the-project" target="_borderline">Borderline</a>, 
+  <br><br>
+	<a href="https://forms.gle/aPD3rkG2edknmu589" target="_submit">Submissions</a> are open; download the <a href="./template.png" target="_template">template</a>.
+  
+  <br><br>
+	Tunnel66 is created and maintained by <a href="https://arts.mit.edu/artists/the-borderline/#about-the-project" target="_borderline">Borderline</a>, 
   the student organization responsible for augmented reality murals in the tunnels under Building 66.
   Contact: <a href="mailto:borderline-team@mit.edu?Subject=Tunnel66" target="_mail">borderline-team@mit.edu</a>
-  </p>
 	
 
 </div>
