--- a/rooms/room1.html
+++ b/rooms/room1.html
@@ -1,4 +1,7 @@
-<p>Gloria's Self Intro! LOL TBD</p>
+<p>Hi I'm Gloria Lin '22! I study 6-3 Computer Science and live in McCormick. Though my dorm room isn't as verdant as this, 
+    it has a gorgeous view of the Charles River (pictured), which I miss :'(. Outside of classes, I'm involved with Borderline (made this site lolol), Women in EECS, 
+    The Tech (newspaper), and I UROP at the Media Lab. Catch Borderline at CP* Midway this Sunday! Fun fact: this room was inspired by the LoFi radio study girl.
+</p>
 <a href="https://www.facebook.com/gl0ria.lin" target="_fb">
     <img alt="Facebook" src="https://image.flaticon.com/icons/svg/124/124010.svg" width="24" height="24">
 </a>
