--- a/rooms/room1.html
+++ b/rooms/room1.html
@@ -1,11 +1,6 @@
-<p>Hi I'm Gloria Lin '22! I study 6-3 Computer Science and live in McCormick. Though my dorm room isn't as verdant as this, 
-    it has a gorgeous view of the Charles River (pictured), which I miss :'(. Outside of classes, I'm involved with Borderline (made this site lolol), Women in EECS, 
+<p>Hi I'm Gloria Lin '22! I study 6-3 Computer Science and live in McCormick Hall. Though my dorm room isn't as verdant as this, 
+    it has a gorgeous view of the Charles River (pictured), which I miss :'(. Outside of classes, I'm involved with Borderline (wrote this site hehe), Women in EECS, 
     The Tech (newspaper), and I UROP at the Media Lab. Catch Borderline at CP* Midway this Sunday! Fun fact: this room was inspired by the LoFi radio study girl.
 </p>
-<a href="https://www.facebook.com/gl0ria.lin" target="_fb">
-    <img alt="Facebook" src="https://image.flaticon.com/icons/svg/124/124010.svg" width="24" height="24">
-</a>
-&nbsp;
-<a href="https://www.instagram.com/igloramus" target="_ig">
-    <img alt="Instagram" src="https://image.flaticon.com/icons/svg/174/174855.svg" width="24" height="24">
-</a>
+<a href="https://www.facebook.com/gl0ria.lin" target="_fb"><img alt="Facebook" src="https://image.flaticon.com/icons/svg/124/124010.svg" width="24" height="24"></a>
+<a href="https://www.instagram.com/igloramus" target="_ig"><img alt="Instagram" src="https://image.flaticon.com/icons/svg/174/174855.svg" width="24" height="24"></a>
