--- a/rooms/room3.html
+++ b/rooms/room3.html
@@ -1,8 +1,3 @@
 <p>Self Intro!</p>
-<a href="https://www.facebook.com" target="_fb">
-    <img alt="Facebook" src="https://image.flaticon.com/icons/svg/124/124010.svg" width="24" height="24">
-</a>
-&nbsp;
-<a href="https://www.instagram.com" target="_ig">
-    <img alt="Instagram" src="https://image.flaticon.com/icons/svg/174/174855.svg" width="24" height="24">
-</a>
+<a href="https://www.facebook.com" target="_fb"><img alt="Facebook" src="https://image.flaticon.com/icons/svg/124/124010.svg" width="24" height="24"></a>
+<a href="https://www.instagram.com" target="_ig"><img alt="Instagram" src="https://image.flaticon.com/icons/svg/174/174855.svg" width="24" height="24"></a>
