--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
     Each student adds a room to Tunnel66, forming one connected tunnel below. Click on a room to learn more about the artist!
 
     <br><br>
-    <a href="https://forms.gle/aPD3rkG2edknmu589" target="_submit">Submissions</a> are open. 
-    To join, read <a href="https://forms.gle/aPD3rkG2edknmu589" target="_submit">FAQ</a> 
-    and download the <a href="./template.png" target="_template">template</a>.
+    To join Tunnel66, read this <a href="https://forms.gle/aPD3rkG2edknmu589" target="_submit">FAQ</a>,  
+    download the <a href="./template.png" target="_template">template</a>,
+    and <a href="https://forms.gle/aPD3rkG2edknmu589" target="_submit">submit</a>.
 
     <br><br>
     Made with love by <a href="https://arts.mit.edu/artists/the-borderline/#about-the-project"
