turn off caching

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 
 <head>
   <title>Tunnel66</title>
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+  <meta http-equiv="Pragma" content="no-cache">
+  <meta http-equiv="Expires" content="0">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -60,22 +63,23 @@
 <div id="desc">
   <h4>Tunnel66: <span id="subHead">isolation, together.</span></h4>
 
-    Tunnels connect many of MIT's buildings, and they can even connect a community in quarantine.
-    Inspired by <a href="https://coronamaison.fun" target="_corona">Corona Maison</a>,
-    Tunnel66 is a place to gather and showcase the unique cultures of current and prospective MIT students,
-    in lieu of <a href="https://admitted.mit.edu/experience" target="_cpw">CPW</a>. 
-    Each student adds a room to Tunnel66, forming one connected tunnel below. Click on a room to learn more about the artist!
+  Tunnels connect many of MIT's buildings, and they can even connect a community in quarantine.
+  Inspired by <a href="https://coronamaison.fun" target="_corona">Corona Maison</a>,
+  Tunnel66 is a place to gather and showcase the unique cultures of current and prospective MIT students,
+  in lieu of <a href="https://admitted.mit.edu/experience" target="_cpw">CPW</a>.
+  Each student adds a room to Tunnel66, forming one connected tunnel below. Click on a room to learn more about the
+  artist!
 
-    <br><br>
-    To join Tunnel66, read this <a href="https://forms.gle/aPD3rkG2edknmu589" target="_submit">FAQ</a>,  
-    download the <a href="./template.png" target="_template">template</a>,
-    and <a href="https://forms.gle/aPD3rkG2edknmu589" target="_submit">submit</a>.
+  <br><br>
+  To join Tunnel66, read <a href="https://forms.gle/aPD3rkG2edknmu589" target="_submit">FAQ</a>,
+  download the <a href="./template.png" target="_template">template</a>,
+  and <a href="https://forms.gle/aPD3rkG2edknmu589" target="_submit">submit</a>.
 
-    <br><br>
-    Made with love by <a href="https://arts.mit.edu/artists/the-borderline/#about-the-project"
-      target="_borderline">MIT Borderline</a>,
-    the student group responsible for augmented reality murals in the tunnels under Building 66.<Br>
-    Contact: <a href="mailto:borderline-team@mit.edu?Subject=Tunnel66" target="_mail">borderline-team@mit.edu</a>
+  <br><br>
+  Made with love by <a href="https://arts.mit.edu/artists/the-borderline/#about-the-project" target="_borderline">MIT
+    Borderline</a>,
+  the student group responsible for augmented reality murals in the tunnels under Building 66.<Br>
+  Contact: <a href="mailto:borderline-team@mit.edu?Subject=Tunnel66" target="_mail">borderline-team@mit.edu</a>
 
 
 </div>
