--- a/index.html
+++ b/index.html
@@ -65,15 +65,15 @@
 
   Tunnels connect many of MIT's buildings, and they can even connect a community in quarantine.
   Inspired by <a href="https://coronamaison.fun" target="_corona">Corona Maison</a>,
-  Tunnel66 is a place to gather and showcase the unique cultures of current and prospective MIT students,
+  Tunnel66 is a place to gather and showcase the unique cultures of the MIT and adMIT communities,
   in lieu of <a href="https://admitted.mit.edu/experience" target="_cpw">CPW</a>.
-  Each student adds a room to Tunnel66, forming one connected tunnel below. Click on a room to learn more about the
-  artist!
+  Each person adds a room to Tunnel66, forming one connected tunnel below. <b>Click on a room to learn more about the
+  artist!</b>
 
   <br><br>
-  To join Tunnel66, read <a href="https://forms.gle/aPD3rkG2edknmu589" target="_submit">FAQ</a>,
+  <b>To join Tunnel66, read <a href="https://forms.gle/aPD3rkG2edknmu589" target="_submit">FAQ</a>,
   download the <a href="./template.png" target="_template">template</a>,
-  and <a href="https://forms.gle/aPD3rkG2edknmu589" target="_submit">submit</a>.
+  and <a href="https://forms.gle/aPD3rkG2edknmu589" target="_submit">submit</a>.</b>
 
   <br><br>
   Made with love by <a href="https://arts.mit.edu/artists/the-borderline/#about-the-project" target="_borderline">MIT
@@ -99,7 +99,7 @@
 
 
 <script>
-  const maxRoom = 2;
+  const maxRoom = 3;
   var arr = [];
 
   $(document).ready(function () {
