--- a/rooms/room1.html
+++ b/rooms/room1.html
@@ -4,4 +4,4 @@
     Catch Borderline at CP* Midway this Sunday! 
 </p>
 <a href="https://www.facebook.com/gl0ria.lin" target="_fb"><img alt="Facebook" src="https://image.flaticon.com/icons/svg/124/124010.svg" width="24" height="24"></a>
-<a href="https://www.instagram.com/igloramus" target="_ig"><img alt="Instagram" src="https://image.flaticon.com/icons/svg/174/174855.svg" width="24" height="24"></a>
+<a href="https://www.instagram.com/igloramus/" target="_ig"><img alt="Instagram" src="https://image.flaticon.com/icons/svg/174/174855.svg" width="24" height="24"></a>
