--- a/rooms/room3.html
+++ b/rooms/room3.html
@@ -1,3 +1,3 @@
-<p>Self Intro!</p>
-<a href="https://www.facebook.com" target="_fb"><img alt="Facebook" src="https://image.flaticon.com/icons/svg/124/124010.svg" width="24" height="24"></a>
-<a href="https://www.instagram.com" target="_ig"><img alt="Instagram" src="https://image.flaticon.com/icons/svg/174/174855.svg" width="24" height="24"></a>
+<p>Hey, I'm Lucy Zhang ('21) and I study computer science (6-3) and statistics. My room is inspired by my favorite quarantine activity, 
+    playing Mario Kart and other games on my Switch, and I imagine that Mario probably needs to social distance himself too during this time.</p>
+<a href="https://www.instagram.com/lucy.zhangg/" target="_ig"><img alt="Instagram" src="https://image.flaticon.com/icons/svg/174/174855.svg" width="24" height="24"></a>
