--- a/index.html
+++ b/index.html
@@ -63,23 +63,21 @@
 <div id="desc">
   <h4>Tunnel66: <span id="subHead">isolation, together.</span></h4>
 
-  Tunnels connect many of MIT's buildings, and they can even connect a community in quarantine.
+  <p>Tunnels connect many of MIT's buildings, and they can even connect a community in quarantine.
   Inspired by <a href="https://coronamaison.fun" target="_corona">Corona Maison</a>,
   Tunnel66 is a place to gather and showcase the unique cultures of the MIT and adMIT communities,
   in lieu of <a href="https://admitted.mit.edu/experience" target="_cpw">CPW</a>.
   Each person adds a room to Tunnel66, forming one connected tunnel below. <b>Click on a room to learn more about the
-  artist!</b>
+  artist!</b></p>
 
-  <br><br>
-  <b>To join Tunnel66, read <a href="https://forms.gle/aPD3rkG2edknmu589" target="_submit">FAQ</a>,
+  <p><b>To join Tunnel66, read <a href="https://forms.gle/aPD3rkG2edknmu589" target="_submit">FAQ</a>,
   download the <a href="./template.png" target="_template">template</a>,
-  and <a href="https://forms.gle/aPD3rkG2edknmu589" target="_submit">submit</a>.</b>
+  and <a href="https://forms.gle/aPD3rkG2edknmu589" target="_submit">submit</a>.</b></p>
 
-  <br><br>
-  Made with love by <a href="https://arts.mit.edu/artists/the-borderline/#about-the-project" target="_borderline">MIT
+  <p>Made with love by <a href="https://arts.mit.edu/artists/the-borderline/#about-the-project" target="_borderline">MIT
     Borderline</a>,
   the student group responsible for augmented reality murals in the tunnels under Building 66.<Br>
-  Contact: <a href="mailto:borderline-team@mit.edu?Subject=Tunnel66" target="_mail">borderline-team@mit.edu</a>
+  Contact: <a href="mailto:borderline-team@mit.edu?Subject=Tunnel66" target="_mail">borderline-team@mit.edu</a></p>
 
 
 </div>
