--- a/index.html
+++ b/index.html
@@ -70,16 +70,14 @@
   Each person adds a room to Tunnel66, forming one connected tunnel below. <b>Click on a room to learn more about the
   artist!</b></p>
 
-  <p><b>To join Tunnel66, read <a href="https://forms.gle/aPD3rkG2edknmu589" target="_submit">FAQ</a>,
+  <b>To join Tunnel66, read <a href="https://forms.gle/aPD3rkG2edknmu589" target="_submit">FAQ</a>,
   download the <a href="./template.png" target="_template">template</a>,
-  and <a href="https://forms.gle/aPD3rkG2edknmu589" target="_submit">submit</a>.</b></p>
-
-  <p>Made with love by <a href="https://arts.mit.edu/artists/the-borderline/#about-the-project" target="_borderline">MIT
-    Borderline</a>,
-  the student group responsible for augmented reality murals in the tunnels under Building 66.<Br>
-  Contact: <a href="mailto:borderline-team@mit.edu?Subject=Tunnel66" target="_mail">borderline-team@mit.edu</a></p>
-
-
+  and <a href="https://forms.gle/aPD3rkG2edknmu589" target="_submit">submit</a>.</b>
+  <br> 
+  Made with love by <a href="https://arts.mit.edu/artists/the-borderline/#about-the-project" target="_borderline">MIT
+  Borderline</a>, the student group responsible for augmented reality murals in the tunnels under Building 66.
+  <br>
+  Contact: <a href="mailto:borderline-team@mit.edu?Subject=Tunnel66" target="_mail">borderline-team@mit.edu</a>
 </div>
 
 <div id="wall"></div>
