--- a/rooms/room4.html
+++ b/rooms/room4.html
@@ -1,3 +1,4 @@
-<p>Self Intro!</p>
-<a href="https://www.facebook.com" target="_fb"><img alt="Facebook" src="https://image.flaticon.com/icons/svg/124/124010.svg" width="24" height="24"></a>
-<a href="https://www.instagram.com" target="_ig"><img alt="Instagram" src="https://image.flaticon.com/icons/svg/174/174855.svg" width="24" height="24"></a>
+<p>I'm Casey, a sophomore in courses 4-B and 6-2! I'm currently quarantining in a house with friends from 5th East. This room is a reflection of our living room, which we've transformed into a makeshift 
+    yoga studio -- having a peaceful space for meditation has been an amazing way to combat the stress and uncertainty going on. Hoping everyone stays safe and can't wait to see you all back on campus in the future!
+</p>
+<a href="https://www.instagram.com/caseymjoh/" target="_ig"><img alt="Instagram" src="https://image.flaticon.com/icons/svg/174/174855.svg" width="24" height="24"></a>
