--- a/rooms/room1.html
+++ b/rooms/room1.html
@@ -1,6 +1,6 @@
-<p>Hi I'm Gloria Lin '22! I study 6-3 Computer Science and live in McCormick Hall (actually I'm home, in Virginia, now). Though my dorm room isn't as verdant as this, 
-    it has a gorgeous view of the Charles River and Boston skyline, pictured here-- can you spot Prudential Tower? I miss the view :'(. Outside of classes, I'm involved with Borderline (wrote this site hehe), Women in Electrical Engineering and Computer Science (WiEECS), 
-    The Tech (newspaper), and I UROP at the Media Lab. I'm really interested in the intersection of art and technology, and I collect memes and Zoom backgrounds. Fun fact: this room was inspired by the LoFi radio study girl. <br>
+<p>Hi I'm Gloria Lin '22! I study 6-3 Computer Science and live in McCormick Hall (actually home, now). Though my dorm room isn't as verdant as this, 
+    it has a gorgeous view of the Charles River and Boston skyline, pictured here-- can you spot Prudential Tower? Outside of classes, I'm involved with Borderline (wrote this site hehe), Women in EECS, 
+    The Tech (newspaper), and I UROP at the Media Lab. Fun fact: this room was inspired by the LoFi radio study girl. <br>
     Catch Borderline at CP* Midway this Sunday! 
 </p>
 <a href="https://www.facebook.com/gl0ria.lin" target="_fb"><img alt="Facebook" src="https://image.flaticon.com/icons/svg/124/124010.svg" width="24" height="24"></a>
