--- a/rooms/room5.html
+++ b/rooms/room5.html
@@ -1,3 +1,6 @@
-<p>Self Intro!</p>
-<a href="https://www.facebook.com" target="_fb"><img alt="Facebook" src="https://image.flaticon.com/icons/svg/124/124010.svg" width="24" height="24"></a>
-<a href="https://www.instagram.com" target="_ig"><img alt="Instagram" src="https://image.flaticon.com/icons/svg/174/174855.svg" width="24" height="24"></a>
+<p>Hello! I'm Allan Gelman and I'm a 2020! I'm majoring in 21E, specifically combining Computer Science and Comparative Media Studies. 
+    I made this room inspired by my favorite Studio Ghibli film, When Marnie Was There. Besides Ghibli, 
+    I also love all sorts of other animation like Steven Universe, Pixar, and lots of anime (My Hero Academia is my current fav). 
+    My involvements on campus include Borderline, MIT Admissions Blogging, and Arts Scholars. 
+    I also just recently started an art-stagram, where I hope to start posting my various paintings/animations once I have more time after graduation! </p>
+<a href="https://www.instagram.com/allan.gelman/" target="_ig"><img alt="Instagram" src="https://image.flaticon.com/icons/svg/174/174855.svg" width="24" height="24"></a>
