--- a/rooms/room8.html
+++ b/rooms/room8.html
@@ -1,9 +1,7 @@
-<p>Hi! I'm Elaine Xiao ('22), majoring in 6-3 and possibly minoring in 9. I live in New House, specifically New House 5 aka Desmond -- 
-     we're primarily known for gaming (see companion cube). Although I personally don't play video games much, I really enjoy playing board/card games, 
-     including Catan, Scythe, Terraforming Mars, Dominion, tractor, and more. I also recently found downforacross.com, and have spent probably an unhealthy 
-     amount of time solving crosswords in the past few weeks (I even did some crosswords with a few classmates and one of my professors last week :o). Living in 
-     New House, I usually cook for myself, and I love trying out new recipes/experimenting with plant-based cooking! My room pretty much looks like this, except in 
-     real life I have way more plushies. Around campus, I'm involved in Borderline's exec as app-development chair (though my first encounter with Borderline 
-     was painting a mural freshman year -- would highly recommend!). I'm also part of Society of Women Engineers (SWE) board, 
-     help plan the MIT Science Olympiad tournament, and UROP in the Media Lab. Hope to see you at CP* and in the fall! :)</p>
-     <a href="https://www.facebook.com/elaine.y.xiao" target="_fb"><img alt="Facebook" src="https://image.flaticon.com/icons/svg/124/124010.svg" width="24" height="24"></a>
+<head>
+	<link rel="stylesheet" href="../main.css">
+</head><div class="room">
+<p>Hi! I'm Elaine Xiao ('22), majoring in 6-3 and possibly minoring in 9. I live in New House, specifically New House 5 aka Desmond --      we're primarily known for gaming (see companion cube). Although I personally don't play video games much, I really enjoy playing board/card games,      including Catan, Scythe, Terraforming Mars, Dominion, tractor, and more. I also recently found downforacross.com, and have spent probably an unhealthy      amount of time solving crosswords in the past few weeks (I even did some crosswords with a few classmates and one of my professors last week :o). Living in      New House, I usually cook for myself, and I love trying out new recipes/experimenting with plant-based cooking! My room pretty much looks like this, except in      real life I have way more plushies. Around campus, I'm involved in Borderline's exec as app-development chair (though my first encounter with Borderline      was painting a mural freshman year -- would highly recommend!). I'm also part of Society of Women Engineers (SWE) board,      help plan the MIT Science Olympiad tournament, and UROP in the Media Lab. Hope to see you at CP* and in the fall! :)</p>     
+</div>
+<a href=
+"https://www.facebook.com/elaine.y.xiao" target="_fb"><img alt="Facebook" src="https://image.flaticon.com/icons/svg/124/124010.svg" width="24" height="24"></a>
