--- a/rooms/room2.html
+++ b/rooms/room2.html
@@ -1,4 +1,7 @@
-<p>Hiii :D My name is Margaret Zheng and I'm c/o 2023 studying course 18 (mathematics) living in McCormick! I totally made up this room but it does preserve some of my favorite memories as a first-year at MIT - 
-    jamming on musical instruments, hanging out with friends, putting sticky notes all over the walls of my dorm room, painting murals, working out... and as a result, as you can see, there is no bed - because, you know, not too much time for sleep :P 
-    (jk, lol, I'd love myself some sleep!) Other than schoolwork, I’m involved with Borderline, Daamit (Digital Art and Animation @ MIT), McCormick’s house government, and I UROP at the Research Lab of Electronics. So excited to see some new friends soon :D</p>
-<a href="https://www.instagram.com/marge_z_art/" target="_ig"><img alt="Instagram" src="https://image.flaticon.com/icons/svg/174/174855.svg" width="24" height="24"></a>
+<head>
+	<link rel="stylesheet" href="../main.css">
+</head><div class="room">
+<p>Hiii :D My name is Margaret Zheng and I'm c/o 2023 studying course 18 (mathematics) living in McCormick! I totally made up this room but it does preserve some of my favorite memories as a first-year at MIT -     jamming on musical instruments, hanging out with friends, putting sticky notes all over the walls of my dorm room, painting murals, working out... and as a result, as you can see, there is no bed - because, you know, not too much time for sleep :P     (jk, lol, I'd love myself some sleep!) Other than schoolwork, I’m involved with Borderline, Daamit (Digital Art and Animation @ MIT), McCormick’s house government, and I UROP at the Research Lab of Electronics. So excited to see some new friends soon :D</p>
+</div>
+<a href=
+"https://www.instagram.com/marge_z_art/" target="_ig"><img alt="Instagram" src="https://image.flaticon.com/icons/svg/174/174855.svg" width="24" height="24"></a>
