--- a/rooms/room9.html
+++ b/rooms/room9.html
@@ -1,6 +1,7 @@
-<p>Hiiii I'm Audrey, an adMITted prefrosh! It's been a couple weeks since pi day and I still can't believe that my dreams came true. 
-     As of now I'm interested in course 6-9 (computation and cognition) and comparative media studies, but it's subject to change. 
-     Recently, I've started fiddling with Unity to make AR overlays for my traditional paintings and definitely want to 
-     explore AR/VR and digital graphics further in college. In addition to coding, painting, and tempura seaweed chips, I LOVE cats. 
-     My orange chonker Mango is the sweetest boi. =^-w-^= </p>
-<a href="https://www.instagram.com/scribbleskibbles/" target="_ig"><img alt="Instagram" src="https://image.flaticon.com/icons/svg/174/174855.svg" width="24" height="24"></a>
+<head>
+	<link rel="stylesheet" href="../main.css">
+</head><div class="room">
+<p>Hiiii I'm Audrey, an adMITted prefrosh! It's been a couple weeks since pi day and I still can't believe that my dreams came true.      As of now I'm interested in course 6-9 (computation and cognition) and comparative media studies, but it's subject to change.      Recently, I've started fiddling with Unity to make AR overlays for my traditional paintings and definitely want to      explore AR/VR and digital graphics further in college. In addition to coding, painting, and tempura seaweed chips, I LOVE cats.      My orange chonker Mango is the sweetest boi. =^-w-^= </p>
+</div>
+<a href=
+"https://www.instagram.com/scribbleskibbles/" target="_ig"><img alt="Instagram" src="https://image.flaticon.com/icons/svg/174/174855.svg" width="24" height="24"></a>
