--- a/rooms/room1.html
+++ b/rooms/room1.html
@@ -4,17 +4,8 @@
 <img class="headshot" src="headshot1.jpg" alt="headshot" align="right">
 <p>Hi I'm Gloria Lin '22! I study 6-3 Computer Science and live in McCormick Hall (actually home, now). Though my dorm room isn't as verdant as this,     it has a gorgeous view of the Charles River and Boston skyline, pictured here-- can you spot Prudential Tower? Outside of classes, I'm involved with Borderline (wrote this site hehe), Women in EECS,     The Tech (newspaper), and I UROP at the Media Lab. Fun fact: this room was inspired by the LoFi radio study girl. <br>    Catch Borderline at CP* Midway this Sunday! </p>
 </div>
-<div class="inline-block">
 
-</div>
-
-
-<div id="banner">
-    <div class="inline-block">
-<a href="https://www.facebook.com/gl0ria.lin" target="_fb"><img alt="Facebook" src="https://image.flaticon.com/icons/svg/124/124010.svg" width="24" height="24"></a>
-    </div>
-
-    <div class="inline-block">
-<a href="https://www.instagram.com/igloramus/" target="_ig"><img alt="Instagram" src="https://image.flaticon.com/icons/svg/174/174855.svg" width="24" height="24"></a>
-    </div>
+<div class="row">
+<a href="https://www.facebook.com/gl0ria.lin" target="_fb"><img class="icon" alt="Facebook" src="https://image.flaticon.com/icons/svg/124/124010.svg"></a>
+<a href="https://www.instagram.com/igloramus/" target="_ig"><img class="icon"alt="Instagram" src="https://image.flaticon.com/icons/svg/174/174855.svg"></a>
 </div>
