--- a/rooms/room10.html
+++ b/rooms/room10.html
@@ -1,6 +1,7 @@
 <head>
 	<link rel="stylesheet" href="../main.css">
 </head><div class="room">
+<img class="headshot" src="headshot10.jpg" alt="headshot" align="right">
 <p>hey, i’m sky, a ’22 majoring in computation & cognition (aka 6-9)! My room is inspired by good memories of being on campus with my friends,      hanging out in my room on first east :) . (if you can’t tell i miss MIT very much!)  Occasionally i play my music loudly but i always make      sure to check with my neighbors! Lol. My room, of course, features my cat, libi, who lives on hall with me. On the wall i put up some of my      current favorite albums i’ve been listening to this quarantine (i’m looking forward to when i can go to concerts again)! At MIT, i’m on      Borderline Exec and UROP at the Media Lab (so far with Synthetic Neurobiology, Camera Culture, and Responsive Environments— and who knows      where i’ll UROP in the fall!). I actually had the initial idea for this project— i hope you all like it!  </p>
 </div>
 <a href=
