--- a/rooms/room4.html
+++ b/rooms/room4.html
@@ -1,6 +1,7 @@
 <head>
 	<link rel="stylesheet" href="../main.css">
 </head><div class="room">
+<!-- <img class="headshot" src="headshot4.jpg" alt="headshot" align="right" -->
 <p>I'm Casey, a sophomore in courses 4-B and 6-2! I'm currently quarantining in a house with friends from 5th East. This room is a reflection of our living room, which we've transformed into a makeshift     yoga studio -- having a peaceful space for meditation has been an amazing way to combat the stress and uncertainty going on. Hoping everyone stays safe and can't wait to see you all back on campus in the future!</p>
 </div>
 <a href=
