update to room 11

--- a/rooms/room6.html
+++ b/rooms/room6.html
@@ -1,6 +1,7 @@
 <head>
 	<link rel="stylesheet" href="../main.css">
 </head><div class="room">
+<img class="headshot" src="headshot6.jpg" alt="headshot" align="right">
 <p>Hello! My name is Danny Gelman and my room was inspired by clouds for the simple reason that I like clouds.     I'm a current senior in 21E, a joint major between any humanities and engineering field. So specifically,      I'm studying 6-3 computer science and CMS comparative media studies. I've UROPed in the MIT Media Lab, Game Lab,      and Teaching Systems Lab doing a variety of artistic and technical work.On campus, I'm an animation chair with Borderline,      an MIT Admissions Blogger, and part of Arts Scholars (a group that takes artsy people on artsy outings).      Other things I've been involved with include Rune (MIT's art and literary magazine) and Chroma (MIT's Science and Humanities Magazine)      as a contributing artist/illustrator. I also really enjoy making art things on my free time, and you can follow my newly created instagram to see what I make :) </p>
 </div>
 <a href=
