--- a/rooms/room2.html
+++ b/rooms/room2.html
@@ -1,6 +1,7 @@
 <head>
 	<link rel="stylesheet" href="../main.css">
 </head><div class="room">
+<img class="headshot" src="headshot2.jpg" alt="headshot" align="right">
 <p>Hiii :D My name is Margaret Zheng and I'm c/o 2023 studying course 18 (mathematics) living in McCormick! I totally made up this room but it does preserve some of my favorite memories as a first-year at MIT -     jamming on musical instruments, hanging out with friends, putting sticky notes all over the walls of my dorm room, painting murals, working out... and as a result, as you can see, there is no bed - because, you know, not too much time for sleep :P     (jk, lol, I'd love myself some sleep!) Other than schoolwork, I’m involved with Borderline, Daamit (Digital Art and Animation @ MIT), McCormick’s house government, and I UROP at the Research Lab of Electronics. So excited to see some new friends soon :D</p>
 </div>
 <a href=
